# preesm-apps

./: .dummy  .gitignore  .gitmodules  .run_ci.sh  README.md
.metadata/: version.ini
Algo/: computeBlockMotion.diagram  top.diagram  (+3 more)
Code/: CMakeLists.txt  cToCpp.sh  cmake_install.cmake  replaceKeyword.sh
Code/codegen/: Core0.c  Core0.cpp  Core1.cpp  Core2.cpp  Core3.cpp  log_memoryScripts.txt  main.c  main.cpp  preesm_gen.h
Code/include/: applicationParameters.h  buffer.h  communication.h  critic.h  environment.h  md5.h  mlp.h  preesm.h  stabilization.h  x86.h  yuvDisplay.h  yuvRead.h  yuvWrite.h
Code/src/: buffer.cpp  critic.cpp  environment.c  environment.cpp  main-sequential.c  matrix.c  mlp.cpp  stabilization.c  yuvDisplay.c  yuvRead.c
SIFT/Code/: CMakeLists.txt
SIFT/Code/include/: ezsift-preesm.h  preesm.h
SIFT/Code/lib/cmake_modules/: FindThreads.cmake
SIFT/Code/mem_scripts/: extract.bsh  split.bsh
SIFT/Code/src/: build_gaussian_pyramid.c  detect_keypoint.c  extract_descriptor.c  ezsift-common.c  filenames.c  io.c  match_keypoints.c
Spider/: CMakeLists.txt  correctCodegen.py
Spider/codegen/: archi_ddpg.cpp  archi_training.cpp  ddpg.h  fct_ddpg.cpp  fct_training.cpp  main.cpp  pi_ddpg.cpp  pi_training.cpp  training.h
Spider/include/: actor.h  mlp.h  spider.h
Spider/lib/spider/: spider.h
Spider/lib/spider/spider-api/user/: archi.h  graph.h
Spider/src/: buffer.cpp  mlp.cpp
org.ietr.preesm.experiment.odroid.moa1/Code/: CMakeLists.txt  Makefile  test_moa
org.ietr.preesm.experiment.odroid.moa1/Code/Stereo/: CMakeLists.txt
org.ietr.preesm.experiment.odroid.moa1/Code/Stereo/include/: ARM.h  ARM_CortexA15.h  ARM_CortexA7.h  communication.h  dump.h  x86.h
org.ietr.preesm.experiment.odroid.moa1/Code/Stereo/src/: displayRGB.c  dump.c  main.c  ppm.c  yuvRead.c
org.ietr.preesm.experiment.odroid.moa1/Code/include/: ARM.h  ARM_CortexA15.h  ARM_CortexA7.h  preesm.h  testcom.h  x86.h
org.ietr.preesm.experiment.odroid.moa1/Code/scripts/: PREESM_cli_init.sh  commandLinePreesm.sh  generateStereoScenarios.py  measure1energy.sh  modifyScenario.py  simulate1energy.sh  targetScriptCrypto.sh  targetScriptStereo.sh
org.ietr.preesm.experiment.odroid.moa1/Code/scripts/Alexandre/: configure.sh  main_script.sh  script_stress_conso.sh  set_freq.sh  shutdown_core.sh
org.ietr.preesm.experiment.odroid.moa1/Code/src/: communication.c  dump.c  main.c  testcom.c
org.ietr.preesm.graphic_libraries/org.ietr.preesm.canny/Code/: CMakeLists.txt
org.ietr.preesm.graphic_libraries/org.ietr.preesm.canny/Code/cmake/modules/: FindThreads.cmake
org.ietr.preesm.graphic_libraries/org.ietr.preesm.canny/Code/include/: canny.h  compare.h  md5.h  preesm.h  sobel.h  sobel2.h  splitMerge.h  uvConsume.h  x86.h  yuv-display.h  yuv-read.h  yuvRead.h
org.ietr.preesm.graphic_libraries/org.ietr.preesm.canny/Code/src/: canny.c  clock.c  compare.c  main-sequential.c  md5.c  sobel.c  sobel2.c  splitMerge.c  uvConsume.c  yuv-display.c  yuvDisplay.c  yuvRead.c
org.ietr.preesm.rfi_filter/Code/: CMakeLists.txt
org.ietr.preesm.sobel-morpho/Code/: CMakeLists.txt
org.ietr.preesm.sobel-morpho/Code/include/: allocDataHost.h  communication.h  difx_gpu_header.h  dump.h  kernel.h  loadConfig.h  mac_barrier.h  morph.h  openFiles.h  preesm.h  vectordefs.h  x86.h  yuvDisplay.h  yuvRead.h
org.ietr.preesm.sobel-morpho/Code/lib/: ReadMe.md
org.ietr.preesm.sobel-morpho/Code/lib/cmake_modules/: FindThreads.cmake
org.ietr.preesm.sobel-morpho/Code/src/: allocDataHost.c  dump.c  kernel.c  loadConfig.c  mac_barrier.c  openFiles.c  sobel.c  splitMerge.c  yuvDisplay.c  yuvRead.c
org.ietr.preesm.sobel-morpho/Code/src/GPU/: difx_gpu.cu
org.ietr.preesm.squeeznet/Code/: CMakeLists.txt
org.ietr.preesm.squeeznet/Code/include/: common.h  convolution-sequential.h  convolution.h  labels.h  md5.h  squeezenet.h  utility.h
org.ietr.preesm.squeeznet/Code/src/: convolution-sequential.c  convolution.c  display.c  main-sequential.c  squeezenet.c  utility.c
org.ietr.preesm.stabilization/Code/: .gitignore  CMakeGCC.sh  CMakeLists.txt  CMakeVS2019.bat  cam.c  displayRGB.c  v4l2uvc.c  v4l2uvc.h
org.ietr.preesm.stabilization/Code/dat/: ReadMe.md  download_dat.sh
org.ietr.preesm.stabilization/Code/include/: communication.h  matrix.h  md5.h  preesm.h
org.ietr.preesm.stabilization/Code/lib/: ReadMe.md  windows_download_visual_libs.sh
org.ietr.preesm.stabilization/Code/lib/cmake_modules/: FindThreads.cmake
org.ietr.preesm.stabilization/Code/src/: communication.c  main-sequential.c  matrix.c  md5.c  socketcom.c  stabilization.c  yuvDisplay.c  yuvRead.c  yuvWrite.c
org.ietr.preesm.switch-example/Code/: CMakeLists.txt
org.ietr.preesm.switch-example/Code/include/: switch.h
org.ietr.preesm.switch-example/Code/lib/spider/include/: spider.h
org.ietr.preesm.switch-example/Code/lib/spider/include/spider-api/spider/: archi.cpp  graph.cpp
org.ietr.preesm.switch-example/Code/lib/spider/include/spider-api/user/: archi.h  graph.h
org.ietr.preesm.switch-example/Code/src/: switch.cpp
tutorials/org.ietr.preesm.sobel/Code/: CMakeCodeblock.bat  CMakeLists.txt  CMakeVC2008.bat  CMakeVS2022.bat  Makefile  sobel
tutorials/org.ietr.preesm.sobel/Code/dat/: .gitignore  CMakeLists.txt  ReadMe.md
tutorials/org.ietr.preesm.sobel/Code/include/: md5.h  preesm.h  x86.h  yuvDisplay.h  yuvRead.h
tutorials/org.ietr.preesm.sobel/Code/include_beforesobel/: preesm.h
tutorials/org.ietr.preesm.sobel/Code/lib/: CMakeLists.txt  ReadMe.md  ReadMe.txt
tutorials/org.ietr.preesm.sobel/Code/src/: sobel.c  yuvDisplay.c
tutorials/org.ietr.preesm.tutorials.tutorial1/Code/: CMakeCodeblock.bat  CMakeLists.txt
tutorials/org.ietr.preesm.tutorials.tutorial1/Code/IDL/: Actuator.idl  Circular.idl  Circular6.idl  Copy.idl  Gen_int.idl  ParallelTest.idl  ParallelTest2Input.idl  Sensor.idl  Sensor2.idl
tutorials/org.ietr.preesm.tutorials.tutorial1/Code/include/: preesm.h  testcom.h  x86.h
tutorials/org.ietr.preesm.tutorials.tutorial1/Code/lib/: ReadMe.md  ReadMe.txt
tutorials/org.ietr.preesm.tutorials.tutorial1/Code/src/: testcom.c
(+1884 files in other folders)
